[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "openai>=1.84.0",
    "openai-agents>=0.0.17",
    "selenium>=4.33.0",
    "uvicorn>=0.34.3",
    "webdriver-manager>=4.0.2",
]
